--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="imc" tabTitle="IMC" tabIcon="home"></ion-tab>
-  <ion-tab [root]="sobre" tabTitle="Sobre" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="imc" tabTitle="IMC" tabIcon="calculator"></ion-tab>
+  <ion-tab [root]="sobre" tabTitle="Sobre" tabIcon="about"></ion-tab>
 </ion-tabs>
